--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -2,13 +2,23 @@ body{
 
     background-color:#6c3c0c;/* cor do plano de fundo*/
     color:rgb(219, 228, 228); /*cor da fonte */
-    font-size: 20px; /* tamanhp da fonte*/
-    margin: 0; /*Margem em relação a tela*/
-    background-image: url("../IMAGENS/capa.jpg");
+    font-size: 23px; /* tamanhp da fonte*/
+    margin: 5%; /*Margem em relação a tela*/
+    background-image: url("../IMAGENS/capa.jpg");*
    
     
 }/* comentarios*/
 
+.Descricao{
+    
+    
+    color:#fff;
+
+
+
+
+
+}
 
 header{
 
@@ -24,24 +34,24 @@ header{
     color: #fff;
     list-style-type: none;/* Remover as Bolinhas de Tópicos */
     display: inline;/*Transformar coluna em linhas*/
-    border: 2px solid #000;
-    padding: 20px;
+    border: 1px solid #000;
+    padding: 15px;
     background-color: #000;
 }
 
 
 li:hover{
-    background-color: #f2dfd3;
-    font-size: 30px;
+    background-color: #f2dfd3;*
+    font-size: 10px;
     font-family: 'Trebuchet MS' ; /* Definir uma fonte*/
-    border: 10px solid #888;
+    border: 1px solid #888;
     
      
 }/* Modifica o conteudo original da tag*/
 
 aside{
 
-    background-image: url("../IMAGENS/caraio.jpg");
+   /* background-image: url("../IMAGENS/caraio.jpg");*/
     background-repeat: no-repeat;
 
 
@@ -66,7 +76,7 @@ aside{
 }
 article{
 
-    border:2px solid #000;
+    /*border:2px solid #000;*/
     text-align: center;
     color: #000;
     font-size: 90%;
@@ -77,24 +87,25 @@ article{
 
 h3{
 
-    border: 2px solid #000;/* bordas*/
+   /* border: 1px solid #000;/* bordas*/
     margin-top: 0%;/* espaço externo*/
     padding: 3%;/* espaço interno*/
-    background-color: #000;
+   /* background-color: #000;*/
     color:#fff;
     font-size: 130%;
+   /* opacity: 50%;*/
 
 
 }
 
 a{
-    border: 2px solid #000;
-    padding: 5%;
+   /* border: 1px solid #000;*/
+    padding: 1%;
     font-weight: bold;/* Negrito*/
-    background-color: #888;
+    /*background-color: #888;*/
     color: #fff;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 1%;
+    padding-right: -1%;
   
  
 
@@ -107,11 +118,61 @@ a{
     margin-left: 25%;
     margin-right: 25%;
     font-weight: bold;
-    color: #fff;
-    background-color: #000;
+    color: rgb(255, 255, 255);
+    background-color: rgb(75, 69, 69);
     margin-bottom: 8%;
     font: 130%;
     border-radius: 50%;
 }
 
+#QuemTitulo{
+
+     padding-left:  42%;
+   /* padding-right: 35%;*/
+    font-weight: bold;/* Negrito*/
+    font-size: 180%;
+
+
+}
+
+#Home{
+
+ font-size: 1%;
+ color: #fff;
+ padding: 1%;
+ font-weight: bold;/* Negrito*/
+ padding-left:  42%;
+ padding-right: 35%;
+
+ 
+}
+
+#cadastro{
+
+    padding-left:  42%;
+    padding-right: 35%;
+
+}
+
+#CaTitulo{
+    font-size: 180%;
+    padding-left:  42%;
+    padding-right: 35%;
+
+
+}
+
+#Inicio{
+
+   
+ font-size: 1%;
+ color: #fff;
+ padding: 1%;
+ font-weight: bold;/* Negrito*/
+ padding-left:  42%;
+ padding-right: 35%;
+
+
+
+}
     
